--- a/Day01/index-START.html
+++ b/Day01/index-START.html
@@ -9,42 +9,52 @@
 
 
   <div class="keys">
+
     <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
     </div>
+    
     <div data-key="83" class="key">
       <kbd>S</kbd>
       <span class="sound">hihat</span>
     </div>
+
     <div data-key="68" class="key">
       <kbd>D</kbd>
       <span class="sound">kick</span>
     </div>
+
     <div data-key="70" class="key">
       <kbd>F</kbd>
       <span class="sound">openhat</span>
     </div>
+
     <div data-key="71" class="key">
       <kbd>G</kbd>
       <span class="sound">boom</span>
     </div>
+
     <div data-key="72" class="key">
       <kbd>H</kbd>
       <span class="sound">ride</span>
     </div>
+
     <div data-key="74" class="key">
       <kbd>J</kbd>
       <span class="sound">snare</span>
     </div>
+
     <div data-key="75" class="key">
       <kbd>K</kbd>
       <span class="sound">tom</span>
     </div>
+
     <div data-key="76" class="key">
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
+
   </div>
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
@@ -58,10 +68,23 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown',(e)=>{
-    console.log(e)
-  })
-
+  function removeStyle(e) {
+    if(e.propertyName =='transform'){
+      e.target.classList.remove("playing");
+    }
+  }
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    if(!audio)return;
+    key.classList.add("playing");
+    audio.currentTime=0;
+    audio.play();
+  }
+  window.addEventListener('keydown',playSound);
+  const keys = Array.from(document.querySelectorAll('.key'));
+  window.addEventListener('transitionend',removeStyle);
+  console.log(keys);
 
 
 </script>
