--- a/Day08/index-START.html
+++ b/Day08/index-START.html
@@ -7,7 +7,63 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
-</script>
+  const canvas = document.querySelector('#draw');
+  const ctx = canvas.getContext('2d');
+  
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+  ctx.strokeStyle = '#BADA55';
+  ctx.lineJoin = 'round';
+  ctx.lineCap = 'round';
+  ctx.lineWidth = 5;
+
+  let isDrawing = false;
+  let direction = true;
+  let lastX = 0;
+  let lastY=0;
+  let hue =5; 
+  function draw(e) {
+    if(isDrawing) {
+      ctx.beginPath();
+      ctx.strokeStyle=`hsl(${hue},80%,50%)`
+      //starts from 
+      ctx.moveTo(lastX,lastY);
+      //end to
+      ctx.lineTo(e.offsetX,e.offsetY);
+      [lastX,lastY]=[e.offsetX,e.offsetY];
+      ctx.stroke();
+      
+      if(hue>=100 || hue<=1){
+        direction = !direction;
+      console.log(direction)
+      }
+      if(direction){
+        ctx.lineWidth++;
+        hue++;
+      }
+      else{
+        ctx.lineWidth--;
+        hue--;
+      }
+      console.log(hue)
+    }
+    
+  }
+  canvas.addEventListener('mousemove',draw)
+  canvas.addEventListener('mousedown',(e)=>{
+    isDrawing=true;
+    [lastX,lastY]=[e.offsetX,e.offsetY];
+  });
+  canvas.addEventListener('mouseup',()=>{
+    isDrawing=false;
+    ctx.lineWidth=5;
+  });
+  canvas.addEventListener('mouseout',()=>{
+    isDrawing=false;
+    ctx.lineWidth=5;
+  });
+  
+  </script>
 
 <style>
   html, body {
