--- a/Day15/index-START.html
+++ b/Day15/index-START.html
@@ -28,47 +28,43 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = JSON.parse(localStorage.getItem('items') ) ||[];
+  const items = JSON.parse(localStorage.getItem('items'))||[];
 
-  function addItem(e) {
-    e.preventDefault(); // 새로고침 방지
-    const text = this.querySelector('[name=item]').value;
-    const item = {
-      text,
-      done:false
-    }
-    console.log(item);
-    items.push(item);
-    this.reset(); // submit을 할 경우에 input에 있는 text를 비워주는 역할
-    populateList(items,itemsList);
-    localStorage.setItem('items',JSON.stringify(items));
-  }
-
-  function populateList(dishs=[], dishList){
-    dishList.innerHTML = dishs.map((dish,i)=>{
+  function displayList(items){
+    console.log(items)
+    const list = document.querySelector('.plates');
+    list.innerHTML = items.map((item,i)=>{
       return `
       <li>
-        <input type ="checkbox" data-index=${i} id="items${i}" ${dish.done? 'checked':''}>
-        <label for="items${i}">${dish.text}</label>
+        <input type="checkbox" data-index=${i} id=item${i} ${item.done?'checked':''}>
+        <label for=item${i}>${item.text}</label>
       </li>
       `
-    }).join('')
-  
+    }).join('');
   }
 
-  function toggleDone(e){
-    if(!e.target.matches('input')) return;
-    console.log(e.target);
-    const el = e.target;
-    const index= el.dataset.index;
-    items[index].done=!items[index].done; //toggle if clicked
-    localStorage.setItem('items',JSON.stringify(items));
-    populateList(items,itemsList);
+  function addItem(e) {
+    e.preventDefault();
+    const text = this.querySelector('input').value;
+    const item= {text,done:false};
+    items.push(item);
+    localStorage.setItem('items',JSON.stringify(items))
+    displayList(items);
+    this.reset();
+  }
+  function haddleClick(e) {
+    if(e.target.matches('input')){
+      console.log(e.target);
+      const index = e.target.dataset.index;
+      items[index].done=!items[index].done;
+      localStorage.setItem('items',JSON.stringify(items))
+      displayList(items);
+    }
   }
 
   addItems.addEventListener('submit',addItem);
-  itemsList.addEventListener('click',toggleDone);
-  populateList(items,itemsList);
+  itemsList.addEventListener('click',haddleClick);
+  displayList(items);
 
 </script>
 
