--- a/Day29/index.html
+++ b/Day29/index.html
@@ -6,17 +6,20 @@
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="timer">
     <div class="timer__controls">
-      <button data-time="20" class="timer__button">20 Secs</button>
-      <button data-time="300" class="timer__button">Work 5</button>
-      <button data-time="900" class="timer__button">Quick 15</button>
-      <button data-time="1200" class="timer__button">Snack 20</button>
-      <button data-time="3600" class="timer__button">Lunch Break</button>
+      <button data-time="20" class="timer__button">20초</button>
+      <button data-time="300" class="timer__button">5분</button>
+      <button data-time="900" class="timer__button">15분</button>
+      <button data-time="1200" class="timer__button">20분</button>
+      <button data-time="3600" class="timer__button">1시간</button>
+
       <form name="customForm" id="custom">
         <input type="text" name="minutes" placeholder="Enter Minutes">
       </form>
+      
     </div>
     <div class="display">
       <h1 class="display__time-left"></h1>
@@ -24,6 +27,6 @@
     </div>
   </div>
 
-  <script src="scripts-FINISHED.js"></script>
+  <script src="scripts-START.js"></script>
 </body>
 </html>
